# PhoneRepairAPI

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20220805_1721.py  0003_invoice_request.py  0004_auto_20220805_2157.py  0005_remove_invoice_user.py  0006_alter_invoice_request.py  0007_invoice_paid.py
djangoProject/: settings.py  urls.py
